hphp/hack/test/typecheck/shape30.php.exp
File "shape30.php", line 11, characters 9-11:
The field y is undefined (Typing[4108])
